force-app/main/default/objects/Training_Feedback__c/Training_Feedback__c.object-meta.xml
<CustomObject>
    <label>Training Feedback</label>
    <nameField>
        <label>Training Feedback ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>