force-app/main/default/objects/Training_Feedback__c/fields/Additional_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback__c</fullName>
    <label>Additional Feedback</label>
    <length>25000</length>
    <type>LongTextArea</type>
</CustomField>