force-app/main/default/objects/Training_Feedback__c/fields/Assigned_Resource__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource__c</fullName>
    <formula>Service_Appointment__r.Assigned_Service_Resource__r.FirstName + &apos; &apos; +  Service_Appointment__r.Assigned_Service_Resource__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Resource</label>
    <type>Text</type>
</CustomField>