force-app/main/default/objects/Training_Feedback__c/fields/Chairs_Comfortable__c.field-meta.xml
<CustomField>
    <fullName>Chairs_Comfortable__c</fullName>
    <label>Chairs Comfortable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>