force-app/main/default/objects/Training_Feedback__c/fields/Course_Engaging__c.field-meta.xml
<CustomField>
    <fullName>Course_Engaging__c</fullName>
    <label>Course Engaging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>