force-app/main/default/objects/Training_Feedback__c/fields/Digital_Ease_Of_Use__c.field-meta.xml
<CustomField>
    <fullName>Digital_Ease_Of_Use__c</fullName>
    <label>Digital Ease Of Use</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>