force-app/main/default/objects/Training_Feedback__c/fields/Increased_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Increased_Knowledge__c</fullName>
    <label>Increased Knowledge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>