force-app/main/default/objects/Training_Feedback__c/fields/Instructor_Engaging__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Engaging__c</fullName>
    <label>Instructor Engaging</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>