force-app/main/default/objects/Training_Feedback__c/fields/Lightning_Level__c.field-meta.xml
<CustomField>
    <fullName>Lightning_Level__c</fullName>
    <label>Lightning Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>