force-app/main/default/objects/Training_Feedback__c/fields/Outside_Noise__c.field-meta.xml
<CustomField>
    <fullName>Outside_Noise__c</fullName>
    <label>Outside Noise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>