force-app/main/default/objects/Training_Feedback__c/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <label>Overall Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>