force-app/main/default/objects/Training_Feedback__c/fields/Questions_And_Discussions__c.field-meta.xml
<CustomField>
    <fullName>Questions_And_Discussions__c</fullName>
    <label>Questions &amp; Discussions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>