force-app/main/default/objects/Training_Feedback__c/fields/Recommend_OSG__c.field-meta.xml
<CustomField>
    <fullName>Recommend_OSG__c</fullName>
    <label>Recommend OSG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>