force-app/main/default/objects/Training_Feedback__c/fields/Relevant_Examples__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Examples__c</fullName>
    <label>Relevant Examples</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>