force-app/main/default/objects/Training_Feedback__c/fields/Room_Comfortable__c.field-meta.xml
<CustomField>
    <fullName>Room_Comfortable__c</fullName>
    <label>Room Comfortable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>