force-app/main/default/objects/Training_Feedback__c/fields/Room_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Room_Temperature__c</fullName>
    <label>Room Temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>