force-app/main/default/objects/Training_Feedback__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <label>Instructor Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>