force-app/main/default/objects/Training_Feedback__c/fields/Training_Location__c.field-meta.xml
<CustomField>
    <fullName>Training_Location__c</fullName>
    <formula>Service_Appointment__r.Location_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Location</label>
    <type>Text</type>
</CustomField>