force-app/main/default/objects/Training_Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Overall_Experience__c</columns>
    <columns>Recommend_OSG__c</columns>
    <columns>Assigned_Resource__c</columns>
    <columns>Instructor__c</columns>
    <columns>Room_Comfortable__c</columns>
    <columns>Training_Location__c</columns>
    <columns>Submitted_At__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>