force-app/main/default/objects/Training_Feedback__c/listViews/All_London.listView-meta.xml
<ListView>
    <fullName>All_London</fullName>
    <columns>NAME</columns>
    <columns>Service_Appointment__c</columns>
    <columns>Overall_Experience__c</columns>
    <columns>Recommend_OSG__c</columns>
    <columns>Assigned_Resource__c</columns>
    <columns>Instructor__c</columns>
    <columns>Room_Comfortable__c</columns>
    <columns>Training_Location__c</columns>
    <columns>Submitted_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Training_Location__c</field>
        <operation>contains</operation>
        <value>London</value>
    </filters>
    <label>All - London Location</label>
</ListView>